test/parallel/taskPar/vass/taskintents-inout-error.chpl
var x: int;

coforall idx in 1..3 with(inout x)  {}
